cb search results overflow fix

--- a/app/styles/_list.scss
+++ b/app/styles/_list.scss
@@ -242,3 +242,10 @@
     }
   }
 }
+
+.search-list-panel {
+  .panel {
+    overflow-y:scroll;
+    flex:1;
+  }
+}
